--- a/app/views/menurecords/_form.html.erb
+++ b/app/views/menurecords/_form.html.erb
@@ -1,33 +1,8 @@
-<%= form_for(@menurecord) do |f| %>
-  <% if @menurecord.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@menurecord.errors.count, "error") %> prohibited this menurecord from being saved:</h2>
+<%= form_tag menurecords_path, method: :post do %>
+  <%= text_field_tag 'menurecord[color_tag]' %>
+  <%= number_field_tag 'menurecord[date]' %>
+  <%= text_field_tag 'menurecord[name][]' %>
+  <%= text_field_tag 'menurecord[name][]' %>
 
-      <ul>
-      <% @menurecord.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :parent_id %><br>
-    <%= f.number_field :parent_id %>
-  </div>
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :color_tag %><br>
-    <%= f.text_field :color_tag %>
-  </div>
-  <div class="field">
-    <%= f.label :date %><br>
-    <%= f.text_field :date %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= submit_tag "submit" %>
 <% end %>
