add menurecords/new post action from iphone

--- a/app/views/menurecords/_form.html.erb
+++ b/app/views/menurecords/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag menurecords_path, method: :post do %>
   <%= text_field_tag 'menurecord[color_tag]' %>
-  <%= number_field_tag 'menurecord[date]' %>
+  <%= text_field_tag 'menurecord[date]' %>
   <%= text_field_tag 'menurecord[name][0]' %>
   <%= text_field_tag 'menurecord[name][1]' %>
 
